Correct styling bug that allows footer overlap of content.

--- a/ng-resume-app/src/styles.scss
+++ b/ng-resume-app/src/styles.scss
@@ -50,7 +50,7 @@ body {
 }
 
 main {
-  padding: 10px 10px 35px 10px;
+  padding: 10px 10px 45px 10px;
 }
 
 a, a:hover, a:visited {
